Marat Minshin was added as an author. Introduction was updated

--- a/cattheory.tex
+++ b/cattheory.tex
@@ -32,7 +32,7 @@
   pdfpagelayout=TwoPageRight,
   pdftitle={Category Theory by Example},
   pdfsubject={Category Theory},
-  pdfauthor={Ivan Murashko, Alexey Radkov},
+  pdfauthor={Ivan Murashko, Alexey Radkov, Marat Minshin},
   pdfkeywords={category theory, Haskell, quantum mechanics}
 }
 \usepackage{hypcap}
@@ -311,7 +311,7 @@
 \makeindex[intoc]
 
 \title{Category Theory by Example}
-\author{Ivan Murashko, Alexey Radkov}
+\author{Ivan Murashko, Alexey Radkov, Marat Minshin}
 %\date{}
 \begin{document}
 \maketitle
