--- a/introduction.tex
+++ b/introduction.tex
@@ -3,11 +3,11 @@
 
 You just looked at yet another introduction to Category Theory. The
 subject mostly consists of a lot of definitions that are related each
-others and I wrote the book to collect all of them in one
-place to be easy checked and updated in future when I decide to refresh
+others and we wrote the book to collect all of them in one
+place to be easy checked and updated in future when we decide to refresh
 my knowledge about the field of math. Therefore the book was written mostly
 for my category theory studying 
-purposes but I will appreciate if somebody else find it useful.
+purposes but we will appreciate if somebody else find it useful.
 
 The topics(chapters) cover the base definitions
 (\mynameref{def:object}, \mynameref{def:morphism} and
@@ -19,7 +19,7 @@ results from the category theory such as Yoneda's lemma (see
 
 There are a lot of 
 examples in each chapter. The examples cover different category
-theory application areas. I assume that the reader is familiar with
+theory application areas. We assume that the reader is familiar with
 the corresponding area and the example(s) can be passed if not. I.e.
 anyone can choose the suitable example(s) for (s)he. 
 
@@ -33,11 +33,12 @@ examples (Haskell, C++, Scala) can be found on github repository
 \cite{bib:github:ivanmurashko}.  
 
 The examples from physics are related to quantum mechanics that is the
-most known for me. For the examples I am inspired by the Bob Coecke
+most known for me. For the examples We were inspired by the Bob Coecke
 article \cite{bib:arxiv:Bob_Coecke_2008}.
 
 The text is distributed under \textbf{Creative Common Public License}
 (see the text of the license at the end of the book)
 i.e. any reader has right to copy, store, modify, distribute or build
 upon the book until the original author is pointed in the derivative
-products. 
+products. The original text of the book can be found at
+\cite{bib:github:ivanmurashko}.  
