Marat Minshin was added as an author. Introduction was updated

--- a/introduction.tex
+++ b/introduction.tex
@@ -5,8 +5,8 @@ You just looked at yet another introduction to Category Theory. The
 subject mostly consists of a lot of definitions that are related each
 others and we wrote the book to collect all of them in one
 place to be easy checked and updated in future when we decide to refresh
-my knowledge about the field of math. Therefore the book was written mostly
-for my category theory studying 
+our knowledge about the field of math. Therefore the book was written mostly
+for our category theory studying 
 purposes but we will appreciate if somebody else find it useful.
 
 The topics(chapters) cover the base definitions
