--- a/basedefinitions.tex
+++ b/basedefinitions.tex
@@ -861,8 +861,8 @@ several functions between them (see \cref{fig:pl_example}).
   We are going to implement \mynameref{def:category} from
   \cref{fig:pl_example}.
 
-  The function \mintinline{haskell}{isEven}
-  converts\mintinline{haskell}{Int} type 
+  The function \mint{haskell}{isEven}
+  converts\mint{haskell}{Int} type 
   into Bool.
   \begin{minted}{haskell}
     isEven :: Int -> Bool
