--- a/cattheory.tex
+++ b/cattheory.tex
@@ -317,15 +317,15 @@
 \maketitle
 \tableofcontents
 
-\input ./notations.tex
+%\input ./notations.tex
 \input ./introduction.tex
-\input ./basedefinitions.tex
-\input ./objectsmorphisms.tex
+%\input ./basedefinitions.tex
+%\input ./objectsmorphisms.tex
 %\input ./monoidalobject.tex
-\input ./functors.tex 
-\input ./nt.tex 
-\input ./monads.tex 
-\input ./kleisli.tex
+%\input ./functors.tex 
+%\input ./nt.tex 
+%\input ./monads.tex 
+%\input ./kleisli.tex
 \input ./yoneda.tex
 
 \printindex
