--- a/cattheory.tex
+++ b/cattheory.tex
@@ -319,7 +319,7 @@
 
 %\input ./notations.tex
 \input ./introduction.tex
-%\input ./basedefinitions.tex
+\input ./basedefinitions.tex
 %\input ./objectsmorphisms.tex
 %\input ./monoidalobject.tex
 %\input ./functors.tex 
