--- a/cattheory.tex
+++ b/cattheory.tex
@@ -320,7 +320,7 @@
 %\input ./notations.tex
 \input ./introduction.tex
 \input ./basedefinitions.tex
-%\input ./objectsmorphisms.tex
+\input ./objectsmorphisms.tex
 %\input ./monoidalobject.tex
 %\input ./functors.tex 
 %\input ./nt.tex 
