--- a/cattheory.tex
+++ b/cattheory.tex
@@ -322,7 +322,7 @@
 \input ./basedefinitions.tex
 \input ./objectsmorphisms.tex
 %\input ./monoidalobject.tex
-%\input ./functors.tex 
+\input ./functors.tex 
 %\input ./nt.tex 
 %\input ./monads.tex 
 %\input ./kleisli.tex
