--- a/cattheory.tex
+++ b/cattheory.tex
@@ -323,7 +323,7 @@
 \input ./objectsmorphisms.tex
 %\input ./monoidalobject.tex
 \input ./functors.tex 
-%\input ./nt.tex 
+\input ./nt.tex 
 %\input ./monads.tex 
 %\input ./kleisli.tex
 \input ./yoneda.tex
