--- a/cattheory.tex
+++ b/cattheory.tex
@@ -323,8 +323,8 @@
 \input ./objectsmorphisms.tex
 %\input ./monoidalobject.tex
 \input ./functors.tex 
-\input ./nt.tex 
-%\input ./monads.tex 
+%\input ./nt.tex 
+\input ./monads.tex 
 %\input ./kleisli.tex
 \input ./yoneda.tex
 
