--- a/cattheory.tex
+++ b/cattheory.tex
@@ -317,7 +317,7 @@
 \maketitle
 \tableofcontents
 
-%\input ./notations.tex
+\input ./notations.tex
 \input ./introduction.tex
 \input ./basedefinitions.tex
 \input ./objectsmorphisms.tex
